fixed contact form styling on mobile

--- a/src/components/Tabs/style.scss
+++ b/src/components/Tabs/style.scss
@@ -6,7 +6,7 @@
   top: 16px;
   right: 16px;
   display: inline-block;
-  z-index: 11;
+  z-index: 9999;
 
   li {
     text-align: right;
