--- a/src/sections/ContactSection/style.scss
+++ b/src/sections/ContactSection/style.scss
@@ -1,7 +1,14 @@
+@import '../../scss/mixin';
+
 .contact-section {
   padding: 50px;
   margin-bottom: 100px;
   padding-top: 0;
+
+  @include mobile {
+    padding: 0;
+    padding-top: 50px;
+  }
 
   .title {
     margin-bottom: 40px;
@@ -15,6 +22,10 @@
       width: 50%;
       display: flex;
       flex-direction: column;
+
+      @include mobile {
+        width: 100%;
+      }
 
       .MuiTextField-root {
         margin-bottom: 20px;
